:lipstick: Fixed left-align technology text in mobile view
Added a simple media query to fix this

--- a/src/app/experience/experience.css
+++ b/src/app/experience/experience.css
@@ -22,6 +22,10 @@
   .row {
     flex-direction: column;
   }
+  .technology-row{
+    flex-direction: column;
+    text-align: center;
+  }
 }
 
 .experience-list {
